[package]
name = "noted"
version = "0.1.0"
authors = ["Aidan <aidan@muttleyville.org>"]
edition = "2021"
description = "A simple CLI tool for taking notes and tracking todos"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
edit = "0.1.4"
